# efm32hg-pacs

./: CHANGELOG.md  README.md
pacs/efm32hg/: Cargo.toml  README.md  build.rs
pacs/efm32hg/efm32hg108/: Cargo.toml
pacs/efm32hg/efm32hg108/src/: lib.rs
pacs/efm32hg/efm32hg110/: Cargo.toml
pacs/efm32hg/efm32hg110/src/: lib.rs
pacs/efm32hg/efm32hg210/: Cargo.toml
pacs/efm32hg/efm32hg210/src/: lib.rs
pacs/efm32hg/efm32hg222/: Cargo.toml
pacs/efm32hg/efm32hg222/src/: lib.rs
pacs/efm32hg/efm32hg308/: Cargo.toml
pacs/efm32hg/efm32hg308/src/: lib.rs
pacs/efm32hg/efm32hg309/: Cargo.toml
pacs/efm32hg/efm32hg309/src/: lib.rs
pacs/efm32hg/efm32hg310/: Cargo.toml
pacs/efm32hg/efm32hg310/src/: lib.rs
pacs/efm32hg/efm32hg321/: Cargo.toml
pacs/efm32hg/efm32hg321/src/: lib.rs
pacs/efm32hg/efm32hg322/: Cargo.toml
pacs/efm32hg/efm32hg322/src/: lib.rs
pacs/efm32hg/efm32hg350/: Cargo.toml
pacs/efm32hg/efm32hg350/src/: lib.rs
pacs/efm32hg/src/: lib.rs
pacs/efm32hg/src/efm32hg108/: mod.rs
pacs/efm32hg/src/efm32hg108/cmu/: if_.rs  status.rs
pacs/efm32hg/src/efm32hg108/dma/: chswreq.rs
pacs/efm32hg/src/efm32hg108/prs/: ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs
pacs/efm32hg/src/efm32hg110/: mod.rs
pacs/efm32hg/src/efm32hg210/: mod.rs
pacs/efm32hg/src/efm32hg222/: mod.rs
pacs/efm32hg/src/efm32hg308/: mod.rs
pacs/efm32hg/src/efm32hg309/: mod.rs
pacs/efm32hg/src/efm32hg310/: mod.rs
pacs/efm32hg/src/efm32hg321/: mod.rs
pacs/efm32hg/src/efm32hg322/: mod.rs
pacs/efm32hg/src/efm32hg350/: mod.rs
(+148 files in other folders)
