[package]
name = "efm32hg-pac"
description = "Peripheral access API for EFM32HG MCU (generated using svd2rust)"
homepage = "https://github.com/efm32-rs/efm32hg-pacs"
version = "0.1.2"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/efm32-rs/efm32hg-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"

[features]
default = [ "rt",]
rt = [ "cortex-m-rt/device",]
efm32hg108 = []
efm32hg110 = []
efm32hg210 = []
efm32hg222 = []
efm32hg308 = []
efm32hg309 = []
efm32hg310 = []
efm32hg321 = []
efm32hg322 = []
efm32hg350 = []

[dependencies.portable-atomic]
version = "~1"
default-features = false

[dependencies.critical-section]
version = "~1"
optional = true

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true

[package.metadata.docs.rs]
features = [ "rt", "efm32hg108", "efm32hg350",]
default-target = "thumbv6m-none-eabi"
targets = []
